--- a/WhackAQuack/app/src/main/res/values/strings.xml
+++ b/WhackAQuack/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_login">Login</string>
+    <string name="menu_profile">Profile</string>
 </resources>
