--- a/WhackAQuack/app/src/main/res/values/strings.xml
+++ b/WhackAQuack/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_login">Login</string>
     <string name="menu_profile">Profile</string>
+    <string name="menu_logout">Logout</string>
 </resources>
