--- a/WhackAQuack/app/src/main/res/values/strings.xml
+++ b/WhackAQuack/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="menu_login">Login</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_logout">Logout</string>
+    <string name="menu_game">Game</string>
 </resources>
