--- a/WhackAQuack/app/src/main/res/values/strings.xml
+++ b/WhackAQuack/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="menu_logout">Logout</string>
     <string name="menu_game">Game</string>
     <string name="menu_stats">Stats</string>
+    <string name="menu_shop">Shop</string>
 </resources>
